--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,8 +35,8 @@ jobs:
         run: |
           python ph.py > ph_data.json
           mkdir -p tmp
-          cp -r data tmp
-          cp ph_data.json tmp
+          mv data tmp
+          mv ph_data.json tmp
 
       - uses: actions/checkout@v3
         with:
@@ -46,8 +46,9 @@ jobs:
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          mv tmp/ph_data.json data .
-          git add -f ph_data.json
-          git add -f data/*
+          mv tmp/ph_data.json .
+          cp --force --archive --update --link tmp/data .
+          rm -rf tmp
+          git add -f ph_data.json data/*
           git commit -m "$(date +%Y%m%d%H%M)"
           git push -f -u origin release
